[gd_scene load_steps=4 format=3 uid="uid://ch0ca1xammm2c"]

[ext_resource type="Script" path="res://scripts/event.gd" id="1_2wimr"]
[ext_resource type="Texture2D" uid="uid://ba8cqciow8r8n" path="res://assets/sprites/window.png" id="2_yc555"]
[ext_resource type="Theme" uid="uid://bvuglxq615n6e" path="res://text.tres" id="3_mpb8s"]

[node name="Event_Manager" type="Node2D"]
script = ExtResource("1_2wimr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(963, 644)
texture = ExtResource("2_yc555")

[node name="Choice Window" type="VBoxContainer" parent="Sprite2D"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1620.0
offset_top = -1170.0
offset_bottom = -390.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Description" type="RichTextLabel" parent="Sprite2D/Choice Window"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_mpb8s")
theme_override_font_sizes/normal_font_size = 32
fit_content = true

[node name="Option 1" type="Button" parent="Sprite2D/Choice Window"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_mpb8s")
theme_override_font_sizes/font_size = 24

[node name="Option 2" type="Button" parent="Sprite2D/Choice Window"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_mpb8s")
theme_override_font_sizes/font_size = 24

[node name="Result Window" type="VBoxContainer" parent="Sprite2D"]
visible = false
offset_left = -810.0
offset_top = -390.0
offset_right = 810.0
offset_bottom = 390.0

[node name="Description" type="RichTextLabel" parent="Sprite2D/Result Window"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_mpb8s")
theme_override_font_sizes/normal_font_size = 32

[node name="Ok" type="Button" parent="Sprite2D/Result Window"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_mpb8s")
theme_override_font_sizes/font_size = 32
text = "Ok"

[connection signal="pressed" from="Sprite2D/Choice Window/Option 1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="Sprite2D/Choice Window/Option 2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="Sprite2D/Result Window/Ok" to="." method="_on_ok_pressed"]
